# Read-AR-Marker-to-get-pose-of-the-robot

./: CMakeLists.txt  README.md  package.xml
launch/: my_world.launch  turtlebot3_empty_image.launch  turtlebot3_empty_qr.launch  turtlebot3_qr.launch
models/: notes.txt
models/ar_marker/: model-1_4.sdf  model.config  model.sdf
models/ar_marker/materials/scripts/: ar_marker.material
models/image_marker/: model-1_4.sdf  model.config  model.sdf
models/image_marker/materials/scripts/: image_marker.material
src/: handImage.cpp  handImage.h  main.cpp  navigation.cpp  navigation.h
worlds/: empty_world.world
