<?xml version="1.0"?>
<package format="2">
  <name>my_assignment</name>
  <version>0.0.0</version>
  <description>The my_assignment package</description>

  <maintainer email="lakshmi@todo.todo">lakshmi</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>roscpp          </build_depend>
  <build_depend>sensor_msgs     </build_depend>
  <build_depend>std_msgs        </build_depend>
  <build_depend>cv_bridge       </build_depend>
  <build_depend>image_transport </build_depend>
  <build_depend>geometry_msgs   </build_depend>

  <exec_depend>roscpp          </exec_depend>
  <exec_depend>sensor_msgs     </exec_depend>
  <exec_depend>std_msgs        </exec_depend>
  <exec_depend>cv_bridge       </exec_depend>
  <exec_depend>image_transport </exec_depend>
  <exec_depend>geometry_msgs </exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
